--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,16 +2,16 @@
 # This file tells Railway how to build and run the FastAPI backend
 
 [phases.setup]
-nixPkgs = ["python311", "postgresql"]
+nixPkgs = ["python311", "python311Packages.pip", "postgresql"]
 
 [phases.install]
-cmds = ["pip install -r requirements.txt"]
+cmds = ["python -m pip install --upgrade pip", "python -m pip install -r requirements.txt"]
 
 [phases.build]
 cmds = ["echo 'Build complete'"]
 
 [start]
-cmd = "uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}"
+cmd = "python -m uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000} --workers 4"
 
 [variables]
 PYTHON_VERSION = "3.11"
