security: prevent node_modules and package files from being committed

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,10 @@ data/*.csv
 
 # Agent
 .agent/
+.vercel
+
+# Node.js (CLI tools installed locally)
+node_modules/
+package.json
+package-lock.json
+yarn.lock
