--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,6 @@
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "frontend/package.json",
-            "use": "@vercel/next"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/api/v1/(.*)",
-            "dest": "https://sliceinsights-backend.onrender.com/api/v1/$1"
-        }
-    ],
-    "env": {
-        "NEXT_PUBLIC_API_URL": "https://sliceinsights-backend.onrender.com/api/v1"
-    }
+    "buildCommand": "cd frontend && npm run build",
+    "devCommand": "cd frontend && npm run dev",
+    "installCommand": "cd frontend && npm install",
+    "outputDirectory": "frontend/.next"
 }
