--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,11 +23,23 @@ jobs:
         with:
           node-version: '18'
 
-      # Add linting/validation steps here
-      # For now, we assume simple checks or placeholders until project specifics are known
-      - name: Check file structure
+      - name: Install dependencies
         run: |
-          if [ ! -f "README.md" ]; then echo "README.md missing"; exit 1; fi
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install ruff safety pytest pytest-asyncio httpx
+
+      - name: Run Linting (Ruff)
+        run: |
+          # Fails if there are errors
+          ruff check .
+          # Check formatting (optional, but good practice)
+          # ruff format --check .
+
+      - name: Run Security Scan (Safety)
+        run: |
+          # Continue on error for now to avoid blocking deploy if false positives, or set to strictly fail
+          safety check -r requirements.txt --ignore 70612 || true 
 
   test:
     needs: lint-and-validate
@@ -36,6 +48,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pytest pytest-asyncio httpx
+
       - name: Run Tests
-        run: echo "Running tests..."
-        # Add actual test commands here, e.g., pytest, npm test
+        run: |
+          pytest tests/ -v
