--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -15,9 +15,13 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application code
 COPY app/ ./app/
+COPY data/ ./data/
 
 # Expose port
 EXPOSE 8000
 
-# Run the application
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Make scripts executable
+RUN chmod +x scripts/*.sh
+
+# Run the application startup script
+CMD ["./scripts/start_prod.sh"]
