--- a/render.yaml
+++ b/render.yaml
@@ -20,3 +20,6 @@ services:
         value: "INFO"
       - key: PYTHON_VERSION
         value: "3.11.0"
+      - key: SEED_FORCE_CLEAR
+        value: "true" # Force clear only on the first run or when reset is needed
+
