--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
-    "buildCommand": "cd frontend && npm run build",
-    "devCommand": "cd frontend && npm run dev",
-    "installCommand": "cd frontend && npm install",
-    "outputDirectory": "frontend/.next"
+    "name": "sliceinsights-frontend",
+    "buildCommand": "npm run build",
+    "devCommand": "npm run dev",
+    "installCommand": "npm install",
+    "outputDirectory": ".next",
+    "framework": "nextjs",
+    "rootDirectory": "frontend"
 }
