--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -16,6 +16,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy application code
 COPY app/ ./app/
 COPY data/ ./data/
+COPY scripts/ ./scripts/
 
 # Expose port
 EXPOSE 8000
