--- a/.github/workflows/production-pipeline.yml
+++ b/.github/workflows/production-pipeline.yml
@@ -24,7 +24,7 @@ jobs:
           pip install -r requirements.txt
           pip install pytest httpx pytest-asyncio
       - name: Run Tests
-        run: pytest tests/
+        run: python -m pytest tests/
         env:
           # Use in-memory SQLite for speed and isolation
           DATABASE_URL: "sqlite:///:memory:"
