--- a/.github/workflows/production-pipeline.yml
+++ b/.github/workflows/production-pipeline.yml
@@ -22,12 +22,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pytest httpx pytest-asyncio
+          pip install pytest httpx pytest-asyncio aiosqlite
       - name: Run Tests
         run: python -m pytest tests/
         env:
           # Use in-memory SQLite for speed and isolation
-          DATABASE_URL: "sqlite:///:memory:"
+          DATABASE_URL: "sqlite+aiosqlite:///:memory:"
           API_SECRET_KEY: "test-secret"
 
   test-frontend:
@@ -42,8 +42,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
       - name: Install Dependencies
         run: npm ci
       - name: Build Check
@@ -101,8 +99,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json
       - name: Install Playwright
         run: |
           cd frontend
