feat(seo): implement Phase 1 SEO improvements for public launch
- Enhanced layout.tsx with comprehensive metadata (keywords, robots, canonical)
- Added metadataBase and improved OpenGraph/Twitter cards
- Created robots.txt for crawler configuration
- Added Next.js sitemap.ts for automatic XML generation
- Updated ALLOWED_ORIGINS in render.yaml for working frontend URL

Agents: @seo-specialist, @devops-engineer

--- a/render.yaml
+++ b/render.yaml
@@ -13,7 +13,7 @@ services:
       - key: DATABASE_URL_SYNC
         sync: false # User must provide Neon Connection String (Sync version)
       - key: ALLOWED_ORIGINS
-        value: '["https://sliceinsights.vercel.app"]' # Placeholder for frontend URL
+        value: '["https://frontend-five-iota-18.vercel.app", "https://sliceinsights.vercel.app"]' # Frontend URLs
       - key: DEBUG
         value: "false"
       - key: LOG_LEVEL
