--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -6,6 +6,7 @@
         }
     ],
     "env": {
-        "NEXT_PUBLIC_API_URL": "https://sliceinsights.onrender.com/api/v1"
+        "NEXT_PUBLIC_API_URL": "https://sliceinsights.onrender.com/api/v1",
+        "BACKEND_URL": "https://sliceinsights.onrender.com"
     }
 }
