fix(ci): point vercel deploy to frontend directory

--- a/.github/workflows/production-pipeline.yml
+++ b/.github/workflows/production-pipeline.yml
@@ -65,7 +65,7 @@ jobs:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: team_ZFJC51ofDNBpjeDzsdlrte9W
           vercel-project-id: prj_sHAVjsnRimdGrHaqUwFdnPHaIz4Q
-          working-directory: ./
+          working-directory: ./frontend
           vercel-args: '--prod'
 
   deploy-backend:
